--- a/lesson_28_revision.html
+++ b/lesson_28_revision.html
@@ -742,6 +742,7 @@
   <div class="code-box">
     <pre>
 from tkinter import *
+from tkinter import colorchooser
 
 root = Tk()
 
@@ -774,6 +775,7 @@ root.mainloop()
   <div class="code-box">
     <pre>
 from tkinter import *
+from tkinter import messagebox
 
 root = Tk()
 
@@ -806,6 +808,7 @@ root.mainloop()
   <div class="code-box">
     <pre>
 from tkinter import *
+from tkinter import filedialog
 
 root = Tk()
 
@@ -841,6 +844,8 @@ root.mainloop()
   <div class="code-box">
     <pre>
 from tkinter import *
+from tkinter import filedialog
+from tkinter import messagebox
 
 root = Tk()
 
@@ -874,6 +879,7 @@ root.mainloop()
   <div class="code-box">
     <pre>
 from tkinter import *
+from tkinter import messagebox
 
 root = Tk()
 
@@ -906,6 +912,8 @@ root.mainloop()
   <div class="code-box">
     <pre>
 from tkinter import *
+from tkinter import messagebox
+from tkinter import filedialog
 
 root = Tk()
 
