--- a/lesson_29.html
+++ b/lesson_29.html
@@ -799,7 +799,7 @@ canvas.create_oval(50, 50, 200, 120)
   <div class="options">
     <div class="option"><input type="radio" name="q3" value="A"><label><code>create_oval()</code> cannot draw circles</label></div>
     <div class="option"><input type="radio" name="q3" value="B"><label>The fill color is missing</label></div>
-    <div class="option"><input type="radio" name="q3" value="C"><label>The difference between the width and height of the bounding box are different</label></div>
+    <div class="option"><input type="radio" name="q3" value="C"><label>The width and height of the bounding box are different</label></div>
     <div class="option"><input type="radio" name="q3" value="D"><label>Canvas always draws ovals by default</label></div>
   </div>
 </div>
